favicon and image redirection 1.0

--- a/templates/HTML.html
+++ b/templates/HTML.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
-    <link rel="icon" type="image/x-icon" href="..\static\CodeAce Logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="/static/CodeAce Logo.jpeg">
     <style>
         /* General Styles */
         body {
@@ -352,7 +352,7 @@ Horizontal line between<hr>the text</div>
 ---------------------------------------
 <img src="Fake.jpg" alt="Image does not exist"><br>
 <img src="https://cdn.avero-tech.com/asrjc/img/logo.png" alt="ASRJC Portal"><br>
-<img src="../static/HelloWorld.jpg" alt="Hello World"></div>
+<img src="/static/HelloWorld.jpg" alt="Hello World"></div>
 
     <h3>Hyperlinks</h3>
     <ul>
@@ -440,7 +440,7 @@ Horizontal line between<hr>the text</div>
     </ul>
     <h2 id="9">9. Refering to Insert</h2>
     <p>This insert is provided during your exams and do use it <strong>only</strong> for reference</p>
-    <img src="../static/HTML reference.jpg" alt="HTML Reference" width="800">
+    <img src="/static/HTML reference.jpg" alt="HTML Reference" width="800">
 
 </body>
 </html>
