--- a/templates/all_code.html
+++ b/templates/all_code.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Code</title>
-    <link rel="icon" type="image/x-icon" href="..\static\CodeAce Logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="/static/CodeAce Logo.jpeg">
     <style>
         /* General Styles */
         body {
@@ -2632,7 +2632,7 @@ VALUES ('Rob', '25/12', '12345678');''')</code>
 <br>
 <h3>4. Refering to Insert</h3>
 <p>This insert is provided during your exams and do use it <strong>only</strong> for reference</p>
-<img src="..\static\SQL.jpg" alt="SQL Reference" height="800">
+<img src="/static/SQL.jpg" alt="SQL Reference" height="800">
 <br>
 <h3>5. Utilising DB browser</h3>
 <div class="video-container">
@@ -2816,7 +2816,7 @@ teacher_coll.drop()</code>
 
 <h3>9. Refering to Insert</h3>
 <p>This insert is provided during your exams and do use it <strong>only</strong> for reference</p>
-<img src="https://lh6.googleusercontent.com/0BUv6AHTyKeH12vRYX3v-fYLfgUgLvGLDGkEO1liWzP-rPaI0HG1lNKw_dbUECiL3sHtWco301-KiUWAkUxDKSUi9_p29iJzKFEN6zclJC8HhCSlnEZaSAPtR1NfAz94TA=w1280" alt="SQL Reference" width="700">
+<img src="/static/NoSQL.jpg" alt="No SQL Reference" width="700">
 <br>
 
 <br>
