--- a/templates/mongo.html
+++ b/templates/mongo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MongoDB</title>
-    <link rel="icon" type="image/x-icon" href="..\static\CodeAce Logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="/static/CodeAce Logo.jpeg">
     <style>
         /* General Styles */
         body {
@@ -401,7 +401,7 @@ teacher_coll.drop()</code>
 
 <h2 id="9">9. Refering to Insert</h2>
 <p>This insert is provided during your exams and do use it <strong>only</strong> for reference</p>
-<img src="static\NoSQL.jpg" alt="NO SQL Reference" width="700">
+<img src="/static/NoSQL.jpg" alt="No SQL Reference" width="700">
 </div>
 <footer>
     <p>&copy; 2025 Karthikeyan Aakarsha Kannan. All rights reserved.</p>
