--- a/templates/CSS.html
+++ b/templates/CSS.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
-    <link rel="icon" type="image/x-icon" href="..\static\CodeAce Logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="/static/CodeAce Logo.jpeg">
     <style>
         /* General Styles */
         body {
@@ -475,7 +475,7 @@ h1 {
 <br>
 <h2 id="8">8. Refering to Insert</h2>
 <p>This insert is provided during your exams and do use it <strong>only</strong> for reference</p>
-<img src="..\static\CSS.jpg" alt="CSS Reference" width="800">
+<img src="/static/CSS.jpg" alt="CSS Reference" width="800">
 
 </div>
 <footer>
