--- a/templates/practical.html
+++ b/templates/practical.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical</title>
-    <link rel="icon" type="image/x-icon" href="../static/CodeAce Logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="/static/CodeAce Logo.jpeg">
     <style>
         /* General Body Styles */
         body {
