--- a/templates/sqlite3.html
+++ b/templates/sqlite3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Structured Query Language</title>
-    <link rel="icon" type="image/x-icon" href="..\static\CodeAce Logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="/static/CodeAce Logo.jpeg">
     <style>
         /* General Styles */
         body {
@@ -363,7 +363,7 @@ LEFT OUTER JOIN Teachers ON Students.classid = Teachers.classid;
 <br>
 <h2 id="4">4. Refering to Insert</h2>
 <p>This insert is provided during your exams and do use it <strong>only</strong> for reference</p>
-<img src="..\static\SQL.jpg" alt="SQL Reference" height="800">
+<img src="/static/SQL.jpg" alt="SQL Reference" height="800">
 <br>
 <h2 id="5">5. Utilising DB browser</h2>
 <div class="video-container">
