google colab and favicon 1.2

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="../static/CodeAce Logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="static/CodeAce Logo.jpeg">
     <style>
         /* General Body Styles */
         body {
@@ -199,7 +199,7 @@
     <section id="resources" class="resources">
         <h2>Resources</h2>
         <ul>
-            <li><a href="https://colab.research.google.com/drive/1GC6CW4NIesACMFZ3jUmcgzav2Mp-TdFC?usp=sharing" target="_blank">Google Collab of All Code</a></li>
+            <li><a href="https://colab.research.google.com/drive/1GC6CW4NIesACMFZ3jUmcgzav2Mp-TdFC?usp=sharing" target="_blank">Google Colab of All Code</a></li>
         </ul>
     </section>
 
