--- a/templates/practical.html
+++ b/templates/practical.html
@@ -409,7 +409,7 @@
         <h2>Resources</h2>
         <ul>
             <li><a href="all_code.html" target="_blank">All Practical Code</a></li>
-            <li><a href="https://colab.research.google.com/drive/1GC6CW4NIesACMFZ3jUmcgzav2Mp-TdFC?usp=sharing" target="_blank">Google Collab of All Code</a></li>
+            <li><a href="https://colab.research.google.com/drive/1GC6CW4NIesACMFZ3jUmcgzav2Mp-TdFC?usp=sharing" target="_blank">Google Colab of All Code</a></li>
         </ul>
     </section>
 
